--- a/app/src/main/res/layout/activity_agregar_fruta.xml
+++ b/app/src/main/res/layout/activity_agregar_fruta.xml
@@ -133,45 +133,94 @@
             android:hint="Beneficios" />
     </com.google.android.material.textfield.TextInputLayout>
 
+<!--    <com.google.android.material.chip.ChipGroup-->
+<!--        android:id="@+id/chipGroup3"-->
+<!--        style="@style/Widget.MaterialComponents.Chip.Choice"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="20dp"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textInputLayout11">-->
+
+<!--&lt;!&ndash;        <com.google.android.material.chip.Chip&ndash;&gt;-->
+<!--&lt;!&ndash;            android:id="@+id/chip4"&ndash;&gt;-->
+<!--&lt;!&ndash;            style="@style/Widget.MaterialComponents.Chip.Choice"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:text="A"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:closeIconEnabled="true"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:closeIcon="@drawable/ic_baseline_close"/>&ndash;&gt;-->
+
+<!--&lt;!&ndash;        <com.google.android.material.chip.Chip&ndash;&gt;-->
+<!--&lt;!&ndash;            android:id="@+id/chip5"&ndash;&gt;-->
+<!--&lt;!&ndash;            style="@style/Widget.MaterialComponents.Chip.Choice"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:text="B"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:closeIconEnabled="true"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:closeIconEndPadding="4dp"&ndash;&gt;-->
+<!--&lt;!&ndash;            app:closeIcon="@drawable/ic_baseline_close"/>&ndash;&gt;-->
+<!--    </com.google.android.material.chip.ChipGroup>-->
+
     <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chipGroup3"
-        style="@style/Widget.MaterialComponents.Chip.Choice"
+        android:id="@+id/chipGroupK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:layout_margin="20dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout11">
 
-<!--        <com.google.android.material.chip.Chip-->
-<!--            android:id="@+id/chip4"-->
-<!--            style="@style/Widget.MaterialComponents.Chip.Choice"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="A"-->
-<!--            app:closeIconEnabled="true"-->
-<!--            app:closeIcon="@drawable/ic_baseline_close"/>-->
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipA"
+            app:rippleColor="@color/blue2"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vitamina A"/>
 
-<!--        <com.google.android.material.chip.Chip-->
-<!--            android:id="@+id/chip5"-->
-<!--            style="@style/Widget.MaterialComponents.Chip.Choice"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="B"-->
-<!--            app:closeIconEnabled="true"-->
-<!--            app:closeIconEndPadding="4dp"-->
-<!--            app:closeIcon="@drawable/ic_baseline_close"/>-->
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipC"
+            app:rippleColor="@color/blue2"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vitamina C"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipD"
+            app:rippleColor="@color/blue2"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vitamina D"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipE"
+            app:rippleColor="@color/blue2"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vitamina E"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipK"
+            app:rippleColor="@color/blue2"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vitamina K"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipB1"
+            app:rippleColor="@color/blue2"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vitamina B1"/>
     </com.google.android.material.chip.ChipGroup>
-
-    <Button
-        android:id="@+id/btn_chips"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chipGroup3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
